# rust_engineer_homework

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/handlers/: gas.rs  mod.rs
src/models/: transaction.rs
src/services/: ethereum.rs
src/utils/: cache.rs  mod.rs  shutdown.rs
tests/: integration_tests.rs
