[package]
name = "eth-gas-estimator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Ethereum gas estimator service"
readme = "README.md"
repository = "https://github.com/yourusername/eth-gas-estimator"
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.6.0" ,features = ["server", "http1", "http2"]}

# Ethereum
ethers = { version = "2.0", features = ["ws"] }

# Async runtime
tokio = { version = "1.34", features = ["full", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
eyre = "0.6"

# Caching
cached = "0.44"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenv = "0.15"
lazy_static = "1.5.0"
url = "2.5.4"

[dev-dependencies]
mockall = "0.11"
axum-test = "17.2.0"
test-log = { version = "0.2", features = ["trace"] }
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3
