[package]
name = "eth-gas-estimator"
version = "0.1.0"
edition = "2021"
authors = ["Louis Gelinet <l.gelinet@protonmil.ch>"]
description = "A high-performance Ethereum gas estimator service"
readme = "README.md"
repository = "https://github.com/lougel/eth-gas-estimator"
license = "MIT"

[dependencies]
# Web framework
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# Ethereum
alloy-provider = {version="0.11.1", features = ["hyper", "reqwest"]}
alloy-primitives = "0.8.21"
alloy-transport = "0.11.1"
alloy-rpc-types = "0.11.1"
alloy-json-rpc = "0.11.1"

# Async runtime
tokio = { version = "1.34", features = ["signal","rt-multi-thread","tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.11"
eyre = "0.6"

# Caching
cached = "0.54.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

config = "0.15.8"
dotenv = "0.15"
lazy_static = "1.5.0"
url = "2.5.4"

[dev-dependencies]
mockall = "0.13.1"
axum-test = "17.2.0"
test-log = { version = "0.2", features = ["trace"] }
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3
